--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
-  <link rel="icon" href="src\assets\img\letter-n.png" />
+  <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/3600/3600934.png" />
   <title>
     The Network 🌐
   </title>
